# web-durak

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  client.Dockerfile  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  nodemon.json  package-lock.json  package.json  server.Dockerfile
client/: game_handling.rs  index.html  rollup.config.js  rollup.config.mjs
client/public/: index.html
client/src/: app.js  error-handling.js  main.js  serve-static.js
client/src/static/: get-params.js  index.js  router.js  style.scss
client/src/static/pages/: index.js  page.js
client/src/static/pages/create-lobby/: create-lobby.js  style.scss
client/src/static/pages/create-user/: create-user.js
client/src/static/pages/error-page/: error-page.js  style.scss
client/src/static/pages/game-page/: game-page.js  style.scss  table-templates.js
client/src/static/pages/homepage/: homepage.js  style.scss
client/src/static/pages/join-lobby/: join-lobby.js  style.scss
client/src/static/pages/lobby-page/: lobby-page.js  style.scss  styles.scss
client/src/static/pages/not-found-page/: not-found-page.js
client/src/static/pages/victory-page/: style.scss  victory-page.js
client/src/static/state/: index.js  lobby-handler.js  user-handler.js
client/src/static/utils/: index.js
client/src/static/websocket/: handle-game.js  handle-lobby.js  handle-server-message.js  index.js  init.js  request-builder.js
src/: game.rs  lobby.rs  main.rs  player.rs  server.rs  utils.rs
src/game/: deck_manager.rs
src/server/: controllers.rs  errors.rs  redis_service.rs  routes.rs  websocket.rs
src/server/controllers/: lobby_controller.rs  player_controller.rs
src/server/routes/: lobby_routes.rs  player_routes.rs
src/server/websocket/: client_request.rs  handle_socket.rs  joint.rs  message_body_handler.rs  process_message.rs  websocket_service.rs
src/utils/: generate_id.rs
