[package]
name = "web-durak"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bstr = "1.9.1"
futures-util = "0.3.30"
parking_lot = "0.12.3"
rand = "0.8.5"
regex = "1.10.5"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.23.1"
wither = "0.9.0"
serde_json = "1.0.120"
tower = "0.4.13"
serde = { version = "1.0.203", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["add-extension"] }
dotenv = "0.15.0"
redis = "0.25.4"
redis-async = "0.17.2"
bb8 = "0.8.5"
bb8-redis = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
log = "0.4.22"