[package]
name = "web-durak"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
rand = "0.8.5"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.120"
tower = "0.4.13"
serde = { version = "1.0.203", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace", "cors"] }
dotenv = "0.15.0"
redis = "0.25.4"
bb8 = "0.8.5"
bb8-redis = "0.15.0"
headers = "0.4.0"
futures = "0.3.30"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
injoint = "0.1.1"
